--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -1,6 +1,7 @@
 ---
 import favicon from '@/assets/favicon.webp';
 import ogDefault from '@/assets/og.webp';
+import Contact from '@/components/contact.astro';
 import Link from '@/components/ui/link.astro';
 import Separator from '@/components/ui/separator.astro';
 import '@fontsource/inter';
