🚧 Begin basic UI setup for search

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,9 +1,13 @@
 ---
 import PostCard from '@/components/post-card.astro';
+import PostSearch from '@/components/post-search.astro';
 import Separator from '@/components/ui/separator.astro';
 import Layout from '@/layouts/layout.astro';
 import { getCollection } from 'astro:content';
 
+export const prerender = false;
+
+const query = new URL(Astro.request.url).searchParams.get('q');
 const posts = await getCollection('posts').then((posts) =>
   posts.sort((a, b) => b.data.published.valueOf() - a.data.published.valueOf()),
 );
@@ -15,8 +19,9 @@ const posts = await getCollection('posts').then((posts) =>
       <h1 class="text-3xl font-bold tracking-widest">BLOG POSTS</h1>
       <p class="max-w-prose text-xs text-2">Explore various sofware-related posts.</p>
     </section>
-    <Separator class="mb-10 mt-4" />
-    <section>
+    <Separator class="mb-8 mt-4" />
+    <PostSearch defaultValue={query} />
+    <section class="mt-8">
       <!-- prettier-ignore -->
       <ul class="sm:gap-10 gap-6 grid lg:grid-cols-3 sm:grid-cols-2">
         {posts.map((post) => (<li><PostCard {post} /></li>))}
