--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -38,11 +38,7 @@ const { remarkPluginFrontmatter, headings, Content } = await post.render();
   og={`open-graph/src/content/posts/${post.slug}.png`}
 >
   <div class="mx-auto mt-fluid-5 max-w-screen-lg xl:grid xl:grid-cols-[1fr,17rem] xl:gap-16">
-    <article
-      data-pagefind-body
-      data-pagefind-meta={`description:${post.data.description}`}
-      class="mx-auto max-w-prose"
-    >
+    <article data-pagefind-body class="mx-auto max-w-prose">
       <div class="flex flex-col gap-3">
         <h1 class="text-lg font-bold uppercase tracking-widest">{post.data.title}</h1>
         <div class="flex flex-wrap items-center gap-4 text-xxs text-2">
