--- a/src/components/ui/dialog.astro
+++ b/src/components/ui/dialog.astro
@@ -10,8 +10,8 @@ const { class: className, ...props } = Astro.props;
 <dialog {...props} class="overflow-hidden backdrop:bg-2/50 backdrop:backdrop-blur-sm">
   <div
     class={twMerge(
-      'fixed left-1/2 top-1/4 z-50 flex w-[90vw] max-w-screen-sm -translate-x-1/2',
-      '-translate-y-1/4 flex-col overflow-auto rounded border bg-1 p-6 text-1',
+      'fixed left-1/2 top-1/4 z-50 w-[90vw] max-w-screen-sm -translate-x-1/2',
+      '-translate-y-1/4 overflow-auto rounded border bg-1 text-1',
       className,
     )}
   >
