--- a/src/components/ui/textfield.astro
+++ b/src/components/ui/textfield.astro
@@ -1,10 +1,10 @@
 ---
-import type { HTMLTag, Polymorphic } from 'astro/types';
+import type { HTMLAttributes } from 'astro/types';
 import { twJoin, twMerge } from 'tailwind-merge';
 
-type Props<Tag extends HTMLTag> = Polymorphic<{ as: Tag }>;
+type Props = HTMLAttributes<'input'>;
 
-const { as: Tag, class: className, type, spellcheck, autocomplete, ...props } = Astro.props;
+const { class: className, type, spellcheck, autocomplete, ...props } = Astro.props;
 ---
 
 <div class={twMerge('relative flex justify-between rounded border', className)}>
@@ -18,7 +18,7 @@ const { as: Tag, class: className, type, spellcheck, autocomplete, ...props } = 
     autocomplete={autocomplete ?? 'off'}
     class={twJoin(
       'relative z-20 flex-1 shrink-0 rounded bg-transparent px-3 py-1 peer-[&:has(svg)]:pl-7',
-      'placeholder:text-2/50 focus-visible:outline-none focus-visible:ring-2',
+      'placeholder:text-2/50 focus-visible:outline-none focus-visible:ring-1',
       'disabled:pointer-events-none disabled:opacity-50',
     )}
   />
