--- a/src/components/post-search.astro
+++ b/src/components/post-search.astro
@@ -3,7 +3,7 @@ import { Search } from 'lucide-astro';
 import { twJoin } from 'tailwind-merge';
 ---
 
-<div class="relative flex items-center justify-between rounded border text-xs" }>
+<div class="relative flex items-center justify-between rounded border text-xs">
   <div class="absolute left-2 top-1/2 z-10 shrink-0 -translate-y-1/2 text-2/50">
     <Search slot="prefix" size={12} aria-hidden />
   </div>
